# reporte-de-los-tiempos

./: .env.example  .gitignore  pyproject.toml  pytest.ini  requirements.txt
prompts/: README.md
prompts/schemas/: prompt_schema.json
prompts/shared/: test_agent.yaml
prompts/specialized/: notion_agent.yaml  pdf_processor_agent.yaml  url_extractor_agent.yaml
prompts/supervisor/: supervisor_agent.yaml
scripts/: run_dev.sh  setup_telegram_webhook.sh
src/: main.py
src/agents/: BaseAgent.py  __init__.py  agent_registry.py  notion_agent.py  pdf_processor_agent.py  supervisor_agent.py  url_extractor_agent.py
src/api/: health.py  models.py  telegram.py
src/core/: config.py  database.py  logging.py  middleware.py
src/models/: database_models.py
src/services/: database_service.py  message_processor.py  telegram_models.py  telegram_service.py
src/tools/: notion_tools.py  pdf_processor_tools.py  tavily_tools.py
tests/: conftest.py  test_config.py  test_database.py
