[project]
name = "reporte-de-los-tiempos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.21.0",
    "fastapi==0.116.2",
    "openai==1.108.1",
    "pydantic==2.11.9",
    "pydantic-settings==2.10.1",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov==7.0.0",
    "sqlalchemy[asyncio]==2.0.43",
    "uvicorn==0.36.0",
]
